# Shooter-Trainer

./: .gitignore  CMakeLists.txt
src/: Assembler.cpp  AssetManager.cpp  AssetManager.h  Entity.cpp  Entity.h  Framework.cpp  Framework.h  Logger.cpp  Logger.h  Registry.cpp  Registry.h  Window.cpp  Window.h  main.cpp
src/old lessons/: imageSizes.cpp  keystates.cpp  main.cpp  transparency.cpp
